@@ -6,6 +6,6 @@ Init_ext(void)
 }
 
 void
-InitVM_ext(rb_vm_t *vm)
+InitVM_ext(ruby_vm_t *vm)
 {
 }
