@@ -1499,7 +1499,7 @@ Init_Encoding(void)
 }
 
 void
-InitVM_Encoding(rb_vm_t *vm)
+InitVM_Encoding(ruby_vm_t *vm)
 {
     VALUE list;
     int i;
