@@ -2615,7 +2615,7 @@ Init_Enumerable(void)
 }
 
 void
-InitVM_Enumerable(rb_vm_t *vm)
+InitVM_Enumerable(ruby_vm_t *vm)
 {
     rb_mEnumerable = rb_define_module("Enumerable");
 
