@@ -17,8 +17,8 @@
 #define CALL(n) {void Init_##n(void); Init_##n();}
 #define rb_call_inits() rb_call_inits(void)
 #else
-#define CALL(n) {void InitVM_##n(rb_vm_t *); InitVM_##n(vm);}
-#define rb_call_inits() rb_vm_call_inits(rb_vm_t *vm)
+#define CALL(n) {void InitVM_##n(ruby_vm_t *); InitVM_##n(vm);}
+#define rb_call_inits(void) rb_vm_call_inits(ruby_vm_t *vm)
 #endif
 
 void
