@@ -761,7 +761,7 @@ Init_Math(void)
 }
 
 void
-InitVM_Math(rb_vm_t *vm)
+InitVM_Math(ruby_vm_t *vm)
 {
     rb_mMath = rb_define_module("Math");
     rb_eMathDomainError = rb_define_class_under(rb_mMath, "DomainError", rb_eStandardError);
