@@ -2497,7 +2497,7 @@ Init_Object(void)
 }
 
 void
-InitVM_Object(rb_vm_t *vm)
+InitVM_Object(ruby_vm_t *vm)
 {
     extern void Init_class_hierarchy(void);
     VALUE metaclass;
