@@ -5429,7 +5429,7 @@ Init_process(void)
 }
 
 void
-InitVM_process(rb_vm_t *vm)
+InitVM_process(ruby_vm_t *vm)
 {
     VALUE rb_mProcUID;
     VALUE rb_mProcGID;
