@@ -1024,7 +1024,7 @@ Init_Range(void)
 }
 
 void
-InitVM_Range(rb_vm_t *vm)
+InitVM_Range(ruby_vm_t *vm)
 {
     rb_cRange = rb_struct_define_without_accessor(
         "Range", rb_cObject, range_alloc,
