@@ -2283,7 +2283,7 @@ Init_Rational(void)
 }
 
 void
-InitVM_Rational(rb_vm_t *vm)
+InitVM_Rational(ruby_vm_t *vm)
 {
     assert(fprintf(stderr, "assert() is now active\n"));
 
