@@ -1138,7 +1138,7 @@ Init_signal(void)
 }
 
 void
-InitVM_signal(rb_vm_t *vm)
+InitVM_signal(ruby_vm_t *vm)
 {
     VALUE mSignal = rb_define_module("Signal");
 
