@@ -7454,7 +7454,7 @@ Init_String(void)
 }
 
 void
-InitVM_String(rb_vm_t *vm)
+InitVM_String(ruby_vm_t *vm)
 {
     rb_cString  = rb_define_class("String", rb_cObject);
     rb_include_module(rb_cString, rb_mComparable);
