@@ -946,7 +946,7 @@ Init_Struct(void)
 }
 
 void
-InitVM_Struct(rb_vm_t *vm)
+InitVM_Struct(ruby_vm_t *vm)
 {
     rb_cStruct = rb_define_class("Struct", rb_cObject);
     rb_include_module(rb_cStruct, rb_mEnumerable);
